# httpclient-logging

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  justfile  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yaml  linting.yaml  testing.yaml
.just/: black.justfile  dotenv.justfile  flake8.justfile  isort.justfile  nox.justfile  pytest.justfile  readthedocs.justfile  tox.justfile  uv.justfile
.make/: 01-path.mk  15-dotenv.mk  55-poetry.mk  56-uv.mk
docs/: changes.md  conf.py  contributing.md  index.rst  readme.md  requirements.txt
docs/modules/httpclient_logging/: index.rst
docs/modules/httpclient_logging/_version/: index.rst
docs/modules/httpclient_logging/about/: index.rst
docs/modules/httpclient_logging/patch/: index.rst
examples/: example_urllib.py
scripts/: example_requests.py  example_urllib.py
src/httpclient_logging/: __init__.py  _version.py  about.py  patch.py
tests/: conftest.py  test_about.py  test_init.py  test_patch.py  test_sitecustomize.py
