# This is a comment.
# syntax-documentation:
#  - https://docs.astral.sh/uv/concepts/projects/#project-metadata
#  - https://python-poetry.org/docs/pyproject
#  - https://flit.readthedocs.io/en/latest/pyproject_toml.html
#
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
#
# Usage with uv:
#   > uv venv
#   > uv pip install .

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "httpclient_logging"
version = "1.0.1a0"
requires-python = ">=3.10"
description = " python-package"
readme = "docs/readme.md"
license = "MIT"
authors = [{name = "Wouter Vanden Hove", email = "wouter@libranet.eu"}]
maintainers = [{name = "Wouter Vanden Hove", email = "wouter@libranet.eu"}]
keywords = ["entrypoints", "sitecustomize", "httpclient", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
# packages = [{ include = "httpclient_logging", from = "src" }]
dependencies = [
    "sitecustomize-entrypoints == 1.1.0",
]

[project.urls]
Docs = "https://httpclient-logging.readthedocs.io"
Pypi = "https://pypi.org/project/httpclient-logging"
Repo = "https://github.com/libranet/httpclient-logging"
Issues = "https://github.com/libranet/httpclient-logging/issues"
Changelog = "https://github.com/libranet/httpclient-logging/releases"

[dependency-groups]
dev = [
    "autoread-dotenv >= 1.0",
    "libranet-logging >= 1.0",
    ]
docs = [
    "sphinx >= 7.1.2",
    "sphinx-rtd-theme >= 3.0.1",
    "recommonmark >= 0.7.1",
    "sphinx-autoapi >= 3.3.3",
    "autoapi >= 2.0.1",
    ]
ipython = [
    "ipdb >= 0.13.13",
    "ipython >= 8.12.3",
    ]
linting = [
    "black >= 24.8.0",
    "flake8 >= 5.0.4",
    "flake8-bugbear >= 23.3.12",
    "flake8-pyproject >= 1.2.3",
    "isort >= 5.13.2",
    "pre-commit >= 3.5.0",
    "pre-commit-hooks >= 5.0.0",
    "pylint >= 3.2.7",
    "ruff >= 0.7.2",
    ]
profiling = [
    "importtime-waterfall >= 1.0.0",
    "tuna >= 0.5.11",
    ]
security = [
    "bandit >= 0.0",
    ]
testing = [
    "nox >= 2024.10.9",
    "pytest >= 8.3.3",
    "pytest-cov >= 5.0.0",
    "pytest-freezer >= 0.4.8",
    "pytest-mock >= 3.14.0",
    ]
typing = [
    "lxml >=4.9",
    "mypy >= 1.13.0",
    ]

# https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#advanced-plugins
# https://github.com/Darsstar/sitecustomize-entrypoints/blob/main/src/sitecustomize/__init__.py
[project.entry-points."sitecustomize"]
httpclient_logging = "httpclient_logging.patch:configure"


[tool.black]
include = '\.py$'  # regex -> single-quotes
line-length = 120
target-version = ["py312"]


[tool.coverage.html]
directory = "var/coverage/html"

[tool.coverage.xml]
output = "var/coverage/coverage.xml"


[tool.coverage.report]
# cfr. https://coverage.readthedocs.io/en/coverage-4.2/excluding.html
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
include = ["src/*"]

[tool.coverage.run]
branch = true
data_file = "var/coverage/coverage.db" # defaults to .coverage

[tool.flake8]
max_line_length = 140
per_file_ignores = [
    "__init__.py:F401", # F401: imported but unused
]

[tool.isort]
line_length = 120             # corresponds to -w  flag
multi_line_output = 3         # corresponds to -m  flag
include_trailing_comma = true # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'   # isort all Python files
known_third_party = []

[tool.mypy]
# cfr https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
cache_dir = "var/cache/mypy"
check_untyped_defs = true
# disallow_untyped_defs = true
exclude = "^bin/"
ignore_missing_imports = true

[tool.nox]
envdir = "var/cache/nox"


[tool.pylint.format]
max-line-length = 120
good-names = [
    "i",  # counter in loop
    "ok", # status
    "ts", # timestamp or timeseries object
]

[tool.pylint.messages_control]
disable = [
    "C0116", # missing-function-docstring
]

[tool.pytest.ini_options]
cache_dir = "var/cache/pytest"
log_cli = false                   # enable to show log-output
log_cli_level = "NOTSET"
filterwarnings = []
markers = ["unit", "integration"]
testpaths = ["tests"]
# the junit-report is used to report coverage in gitlab
addopts = "--junit-xml='var/coverage/pytest.xml' --cov --cov-append "

[tool.tox]
# see https://tox.wiki/en/3.5.0/example/basic.html#pyproject-toml-tox-legacy-ini
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
# envlist = [py39, py310, py311]
isolated_build = True
toxworkdir = var/cache/tox

[testenv]
allowlist_externals =
    make
    poetry
skip_install = true
commands =
    make install
    pytest --pdb --exitfirst
"""

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
# https://github.com/pandas-dev/pandas/blob/main/pyproject.toml
cache-dir = "var/cache/ruff"
ignore = [
    "B011", # B011 Do not call assert False since python -O removes these calls.
]
line-length = 120

[tool.uv.workspace]
members = ["var/tmp/demo-uv"]


[tool.uv]
package = true
default-groups = [
    # "dev",
    "docs",
    "ipython",
    "linting",
    # "profiling",
    "testing",
    "typing",
    # "security",
    ]